<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="app_name">Проверка Авто. Антиперекуп</string>
    <string name="settings">Настройки</string>
    <string name="lorem_ipsum">Тут большой текст</string>
    <string name="article_detail_more_info">Больше информации</string>
    <string name="insurance_title">Проверка полиса ОСАГО</string>
    <string name="insurance_subhead">Вы можете проверить полис ОСАГО по его номеру</string>
    <string name="insurance_series">Серия полиса</string>
    <string name="insurance_number">Номер полиса</string>
    <string name="hint_vin">VIN код автомобиля</string>
    <string name="navigation_title">Проверка авто</string>
    <string name="navigation_title2">Антиперекуп</string>
    <string name="navigation_quotes">ГИБДД</string>
    <string name="navigation_history">История проверок</string>
    <string name="navigation_insurance">Проверка страховки</string>
    <string name="navigation_polis">Поиск страховки</string>
    <string name="navigation_reestr">Реестр залогов</string>
    <string name="navigation_eaisto">Поиск тех. осмотра</string>
    <string name="navigation_fssp">Проверка продавца в ФССП</string>
    <string name="navigation_vk">Мы Вконтакте</string>
    <string name="navigation_settings">Настройки</string>
    <string name="navigation_about">О приложении</string>
    <string name="navigation_ad">Реклама</string>
    <string name="navigation_help_project">Помощь проекту</string>
    <string name="navigation_price">Реклама в приложении</string>
    <string name="navigation_phone">Поиск по номеру телефона</string>
    <string name="navigation_plate">Поиск по номеру авто</string>
    <string name="navigation_fines">Проверка штрафов</string>
    <string name="navigation_decoder">Расшифровка VIN</string>
    <string name="navigation_mileage">Пробег авто</string>
    <string name="navigation_mileage_inapp">Оплатить запросы</string>
    <string name="navigation_my_reports">Мои отчеты</string>
    <string name="navigation_full_report">Полный отчет</string>
    <string name="loading">Загрузка &#8230;</string>
    <string name="cancelled">Отменено</string>
    <string name="enter_captcha">Введите символы</string>
    <string name="captcha_ok">Отправить</string>
    <string name="captcha_cancel">Отмена</string>
    <string name="captcha">Код с картинки</string>
    <string name="error_empty_vin">Вы не ввели VIN код</string>
    <string name="error_empty_request">Вы не ввели данные</string>
    <string name="error_empty_phone">Вы не ввели номер телефона</string>
    <string name="error_all_inputs_required">Все поля обязательны</string>
    <string name="error_empty_captcha_code">Введите код с картинки</string>
    <string name="error_no_internet">Проверьте свое интернет соединение</string>
    <string name="error_no_captcha">Извините, проблемы с доступностью сайта ГИБДД</string>
    <string name="error_no_captcha_general">Извините, проблемы с доступностью источника данных</string>
    <string name="error">Ошибка</string>
    <string name="error_details">Сервер ГИБДД недоступен. Пожалуйста, попробуйте позже</string>
    <string name="error_no_inapp_mileage">У Вас нет оплаченных запросов</string>
    <string name="warning">Внимание</string>
    <string name="warning_found_2">Найдено количество записей об авариях: %1$s</string>
    <string name="warning_found_3">Найдено количество записей о розыске: %1$s</string>
    <string name="warning_found_4">Найдено количество записей об ограничениях: %1$s</string>
    <string name="warning_error">Проверка завершилась ошибкой со стороны сервера ГИБДД. Пожалуйста, попробуйте выполнить поиск позднее</string>
    <string name="notice">Результат запроса:</string>
    <string name="notice_2">Записи об авариях в базе ГИБДД не найдены</string>
    <string name="notice_3">Записи о розыске в базе ГИБДД не найдены</string>
    <string name="notice_4">Записи об ограничениях в базе ГИБДД не найдены</string>
    <string name="notice_fines">Штрафы не найдены</string>
    <string name="reg_inic">Регион:</string>
    <string name="model">Модель ТС:</string>
    <string name="data_pu">Дата:</string>
    <string name="god_vyp">Год выпуска ТС:</string>
    <string name="twice_back_button_pressed_warning">Нажмите еще раз для выхода</string>
    <string name="rate_app_title">Нравится приложение?</string>
    <string name="rate_app_later">Позже</string>
    <string name="rate_app_never">Никогда</string>
    <string name="rate_app_confirmation_title">Спасибо за высокую оценку!</string>
    <string name="rate_app_confirmation_description">Пожалуйста, поставьте оценку в Play Market. Это очень поможет развитию приложения</string>
    <string name="rate_app_dialog_positive_button">Конечно!</string>
    <string name="rate_app_dialog_negative_button">Нет</string>
    <string name="rate_app_feedback_title">Нам очень жаль</string>
    <string name="rate_app_feedback_description">Расскажите, что Вам не понравилось. Мы исправимся для Вас!</string>
    <string name="rate_app_feedback_send">Отправить</string>
    <string name="rate_app_feedback_sent">Отправка отзыва через почтовый клиент &#8230;</string>
    <string name="person_type">Тип владельца:</string>
    <string name="from">c:\u0020</string>
    <string name="to">по:\u0020</string>
    <string name="date_now">\u0020наст. время</string>
    <string name="date_restricted">\u0020н/д</string>
    <string name="person_natural">Физическое лицо</string>
    <string name="person_legal">Юридическое лицо</string>
    <string name="warning_not_found_1">Информация о владельцах не найдена</string>
    <string name="warning_not_found_2">Информация об авариях не найдена</string>
    <string name="vehicle_passport">Сведения о ПТС:</string>
    <string name="vehicle_passport_number">Номер ПТС:</string>
    <string name="vehicle_passport_issue">Выдан:</string>
    <string name="vehicle_details">Сведения об автомобиле:</string>
    <string name="vehicle_model">Марка, модель:</string>
    <string name="vehicle_year">Год выпуска:</string>
    <string name="vehicle_vin">VIN:</string>
    <string name="vehicle_body_number">Кузов:</string>
    <string name="vehicle_chassis_number">Шасси:</string>
    <string name="vehicle_color">Цвет:</string>
    <string name="vehicle_engine_volume">Рабочий объем (см³):</string>
    <string name="vehicle_engine_power">Мощность (кВт/л.с.):</string>
    <string name="vehicle_category">Категория:</string>
    <string name="vehicle_type">Тип:</string>
    <string name="accident_model">Модель:</string>
    <string name="accident_mark">Марка:</string>
    <string name="accident_damage_state">Состояние ТС:</string>
    <string name="accident_region_name">Регион:</string>
    <string name="accident_time">Время:</string>
    <string name="accident_number">№ происшествия:</string>
    <string name="accident_type">Тип:</string>
    <string name="accident_damage_points">Повреждения:</string>
    <string name="restricted_model">Модель:</string>
    <string name="restricted_region">Регион:</string>
    <string name="restricted_date">Дата ограничения:</string>
    <string name="restricted_ogrkod">Вид ограничения:</string>
    <string name="restricted_divtype">Кем установлено:</string>
    <string name="restricted_phone">Телефон для связи:</string>
    <string name="restricted_osn_ogr">Основание:</string>
    <string name="error_404">Информация по указанному VIN не может быть предоставлена</string>
    <string name="error_403">По указанному VIN не найдена информация о регистрации транспортного средства</string>
    <string-array name="insurance_series_array">
        <item>ХХХ</item>
        <item>ССС</item>
        <item>ЕЕЕ</item>
        <item>ВВВ</item>
        <item>МММ</item>
        <item>ККК</item>
    </string-array>
    <string name="error_empty_insurance">Вы не ввели номер полиса</string>
    <string name="insurance_details">Сведения о полисе ОСАГО:</string>
    <string name="insurance_name">Страховщик:</string>
    <string name="insurance_license_plate">Гос знак:</string>
    <string name="insurance_vin">VIN:</string>
    <string name="insurance_status">Статус договора ОСАГО:</string>
    <string name="perekup_1">Срочный выкуп авто</string>
    <string name="perekup_2">Помощь в подборе авто</string>
    <string name="perekup_3">При поддержке Перекуп-Клуб</string>
    <string name="sravni_1">КАСКО со скидкой</string>
    <string name="policy_slide_title">Проверьте авто на ДТП</string>
    <string name="policy_message">Продолжая, Вы принимаете <u>политику конфиденциальности</u></string>
    <string name="policy_text">1. Какие личные данные мы используем\n\n
В качестве ваших личных данных мы используем: данные о вашем примерном местоположении, информация о телефоне, введенные данные.\n\n
2. Для каких целей используются личные данные пользователей\n\n
- Ваше примерное местоположение необходимо, чтобы мы могли определить, из какого Вы региона. Регион используется для выбора региона по умолчанию при поиске по базе ФССП.\n\n
- Информация о телефоне используется для сбора и анализа ошибок в приложении. Чтобы информация была более полной, нам необходимо знать марку, модель, версию системы Вашего телефона.\n\n
- Введенные данные используются для отправки запросов в сторонние сервисы (база ГИБДД, сервис поиска по номеру телефона, ФССП и т.д.). Мы никаким образом не собираем и не храним эту информацию.\n\n
3. Передача личных данных третьим лицам\n\n
Мы не передаем ваши личные данные третьим лицам.\n\n
4. Безопасность личных данных\n\n
Мы храним и обрабатываем ваши личные данные надежным и безопасным образом. Мы следуем нашим процедурам, принципам и мерам, которые гарантируют конфиденциальность пользователей с учетом требований законодательства. Мы постоянно совершенствуем способы сбора, хранения и обработки ваших личных данных.\n\n
5. Изменение политики конфиденциальности\n\n
Мы будем регулярно обновлять нашу Политику конфиденциальности, чтобы информировать вас обо всех изменениях в нашем подходе к обработке ваших личных данных. \n\nПоследнее обновление политики конфиденциальности: 5 июля 2017 года.
\n\n
English version:\n\n
1. What personal information we use\n\n
As your personal data we use: your location information, phone information, entered data.\n\n
2. Why do we use your personal data\n\n
- Your location information is necessary to determine from what region you are. The region is used to select the default region when searching through the Federal Bailiff Service database.\n\n
- The phone information is used to collect and analyze errors in the application. To make the information more complete, we need to know the brand, model, version of your phone system.\n\n
- The entered data is used to send the requests to the third-party services (Department of Motor Vehicles base, search by phone number service, Federal Bailiff Service etc). We do not collect or store this information.\n\n
3. The transfer of personal data to third parties\n\n
We do not transfer your personal data to third parties.\n\n
4. Security of personal data\n\n
We store and process your personal data in a reliable and secure manner. We follow our procedures, principles and measures that guarantee the confidentiality of users in accordance with the requirements of the law. We constantly improve the ways of collecting, storing and processing your personal data.\n\n
5. Changes in the privacy policy\n\n
We will regularly update our privacy policy to inform you about the changes in our approach to processing your personal data. The last update: July 5, 2017.
</string>
    <string name="report_number">Номер отчета:</string>
    <string name="report_status">Статус отчета:</string>
    <string name="report_added">Добавлен:</string>
    <string name="report_updated">Обновлен:</string>
    <string name="report_download">Скачать</string>
    <string name="report_example">Пример отчета</string>
</resources>