<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/appIntroBottomBarHeight"
    android:background="@color/intro_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="40dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/policy_slide_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/policy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="gone"
            android:gravity="start"
            android:text="@string/policy_text"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:scrollbars="vertical" />

        <ImageView
            android:id="@+id/slide_image"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/slide_9"/>

    </LinearLayout>

    <TextView
        android:id="@+id/policy_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:paddingTop="50dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/policy_message"/>

</LinearLayout>